# device_detector

./: .gitignore  .pre-commit-config.yaml  .style.yapf  .travis.yml  MANIFEST.in  Makefile  README.md  configure_regex_interpolators.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml
device_detector/: LICENSE  __init__.py  device_detector.py  enums.py  lazy_regex.py  settings.py  utils.py  yaml_loader.py
device_detector/appdetails/: ai.yml  antivirus.yml  app_ids.yml  av.yml  browser.yml  desktop_app.yml  desktop_apps.yml  game.yml  library.yml  mediaplayer.yml  mediaplayers.yml  messaging.yml  mobile_app.yml  mobile_apps.yml  navigation.yml  osutility.yml  p2p.yml  pim.yml  productivity.yml  vpnproxy.yml
device_detector/appids/: ignored.yml  normalized.yml  secondary.yml
device_detector/parser/: __init__.py  client_hints.py  extractors.py  key_value_pairs.py  operating_system.py  os_fragment.py  parser.py  settings.py
device_detector/parser/client/: __init__.py  adobe_cc.py  base.py  browser.py  desktopapp.py  dictua.py  extractor_name_version.py  extractor_whole_name.py  feed_reader.py  game.py  library.py  mediaplayer.py  messaging.py  mobileapp.py  osutility.py  p2p.py  pim.py  slashed_name_extractor.py  vpnproxy.py  whole_name_extractor.py
device_detector/parser/device/: __init__.py  base.py  bot.py  camera.py  car_browser.py  console.py  device.py  notebook.py  portable_media_player.py  television.py  vendor_fragment.py
device_detector/regexes/: osfragments.yml  oss.yml
device_detector/regexes/client/: antivirus.yml  browsers.yml  desktop_apps.yml  libraries.yml  mediaplayers.yml  mobile_apps.yml  osutility.yml  pim.yml
device_detector/regexes/device/: mobiles.yml  televisions.yml
device_detector/regexes/local/: osfragments.yml  oss.yml
device_detector/regexes/upstream/: oss.yml
device_detector/tests/: base.py
device_detector/tests/device/: test_device_detector.py  test_smartphones.py  test_tablets.py  test_televisions.py  test_upstream_collisions.py
device_detector/tests/fixtures/: bots.yml  camera.yml  desktop.yml  feature_phone.yml  phablet.yml  smartphone-1.yml  smartphone-2.yml  tv.yml  (+4 more)
(+140 files in other folders)
