[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "device_detector"
version = "6.0.0"
description="Python3 port of matomo's Device Detector"
readme = "README.md"
license = {file = "device_detector/LICENSE.md"}
keywords = [
    "user agent",
    "app detection",
    "device detection",
    "client hints",
]
dependencies = [
    "ahocorasick-rs",
    "pyyaml",
    "regex",
    "backports.strenum; python_version <= '3.10'",
    "typing_extensions; python_version <= '3.10'",
]

requires-python = ">=3.10"
authors = [
  {name = "Dave Burkholder", email = "dave@thinkwelldesigns.com"}
]
maintainers = [
  {name = "Dave Burkholder", email = "dave@thinkwelldesigns.com"}
]

classifiers = [
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "MIT",
    "Programming Language :: Python",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.urls]
Homepage = "https://github.com/thinkwelltwd/"
Repository = "https://github.com/thinkwelltwd/device_detector.git"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_incomplete_defs = true
show_error_context = true
follow_imports = 'silent'

exclude = [
    "tests/",
]

[tool.bandit]
exclude_dirs = [
    "*/tests/*",
]
skips = [
    "B110",
    "B112",
]

[tool.ruff]
line-length = 100
preview = true

exclude = [
    "*/tests/*",
]

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]

[tool.ruff.lint.flake8-quotes]
multiline-quotes = "single"
